--- a/Nithin2003/Views/Users/EditDetails.cshtml
+++ b/Nithin2003/Views/Users/EditDetails.cshtml
@@ -238,7 +238,7 @@
                                 <div class="text-center">
                                     
                                     <input type="submit" class="btn btn-primary my-4" name="btnsubmit" value="Update" />
-                                    <a asp-controller="Admin" asp-action="Index" class="btn btn-primary my-4" type="button">Back To User Details</a>
+                                    <a asp-controller="Dashboard" asp-action="Index" class="btn btn-primary my-4" type="button">Back To User Details</a>
                                 </div>
                             </form>
                         </div>
