--- a/Nithin2003/Views/DashBoard/UsersLoginDetails.cshtml
+++ b/Nithin2003/Views/DashBoard/UsersLoginDetails.cshtml
@@ -17,8 +17,8 @@
         <div class="scrollbar-inner">
             <!-- Brand -->
             <div class="sidenav-header  align-items-center">
-                <a class="navbar-brand" href="javascript:void(0)">
-                    <a asp-controller="Home" asp-action="Index" type="button">Nithin</a>
+                <a class="navbar-brand" asp-controller="Home" asp-action="Index" type="button">
+                    <img style="max-height:60px;width:200px;" src="~/Argon-assets/img/Screenshot 2024-11-03 214613.png" class="navbar-brand-img" alt="...">
 
                 </a>
             </div>
