--- a/Nithin2003/Views/Shared/_Form.cshtml
+++ b/Nithin2003/Views/Shared/_Form.cshtml
@@ -34,9 +34,12 @@
     <!-- Navbar -->
     <nav id="navbar-main" class="navbar navbar-horizontal navbar-transparent navbar-main navbar-expand-lg navbar-light">
         <div class="container">
-            <a class="navbar-brand" href="dashboard.html">
-                @*<img src="~/argon-assets/img/brand/white.png">*@
+            @* <a class="navbar-brand" href="dashboard.html">
+                <img src="~/argon-assets/img/brand/white.png">
             </a>
+            <a class="navbar-brand" asp-controller="Home" asp-action="Index">
+                <img style="max-height:60px;width:150px;" src="~/Argon-assets/img/Screenshot 2024-11-03 214613.png">
+            </a> *@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -44,9 +47,15 @@
                 <div class="navbar-collapse-header">
                     <div class="row">
                         <div class="col-6 collapse-brand">
-                            <a href="dashboard.html">
-                                @* <img src="~/argon-assets/img/brand/blue.png"> *@
+                            <a asp-controller="Home" asp-action="Index">
+                                <img style="max-height:60px;width:150px;" src="~/Argon-assets/img/Screenshot 2024-11-03 214613.png" class="navbar-brand-img" alt="...">
                             </a>
+                            @* <div class="sidenav-header  align-items-center">
+                                <a class="navbar-brand" asp-controller="Home" asp-action="Index" type="button">
+                                    <img style="max-height:60px;width:200px;" src="~/Argon-assets/img/Screenshot 2024-11-03 214613.png" class="navbar-brand-img" alt="...">
+
+                                </a>
+                            </div> *@
                         </div>
                         <div class="col-6 collapse-close">
                             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
