Updated Side navigation bar links

--- a/Nithin2003/Views/Admin/ApproveAsAdmin.cshtml
+++ b/Nithin2003/Views/Admin/ApproveAsAdmin.cshtml
@@ -1,10 +1,81 @@
 ﻿@model AdminOrEditor
 @{
     ViewData["Title"] = "ApproveAsAdmin";
-    Layout = "~/Views/Shared/_Form.cshtml";
+    Layout = "~/Views/Shared/_DashBoard.cshtml";
 }
 
 @* <h1>ApproveAsAdmin</h1> *@
+<!-- Sidenav -->
+<nav class="sidenav navbar navbar-vertical  fixed-left  navbar-expand-xs navbar-light bg-white" id="sidenav-main">
+    <div class="scrollbar-inner">
+        <!-- Brand -->
+        <div class="sidenav-header  align-items-center">
+            <a class="navbar-brand" asp-controller="Home" asp-action="Index" type="button">
+                <img style="max-height:60px;width:200px;" src="~/Argon-assets/img/Screenshot 2024-11-03 214613.png" class="navbar-brand-img" alt="...">
+
+            </a>
+        </div>
+        <div class="navbar-inner">
+            <!-- Collapse -->
+            <div class="collapse navbar-collapse" id="sidenav-collapse-main">
+                <!-- Nav items -->
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" asp-controller="Dashboard" asp-action="Index">
+                            <i class="ni ni-tv-2 text-primary"></i>
+                            <span class="nav-link-text">My Dashboard</span>
+                        </a>
+                    </li>
+
+                    @if (Context.Session.GetString("Admin") == "True")
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link active" asp-controller="Admin" asp-action="LoanAmountRequest">
+                                <i class="ni ni-money-coins"></i>
+                                <span class="nav-link-text">Loan Requests</span>
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link active" asp-controller="Dashboard" asp-action="UsersLoginDetails">
+                                <i class="ni ni-circle-08"></i>
+                                <span class="nav-link-text">Users Login History</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" asp-controller="Admin" asp-action="Index">
+                                <i class="ni ni-circle-08"></i>
+                                <span class="nav-link-text">Users Details</span>
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link active" asp-controller="Admin" asp-action="UserstransactionHistory">
+                                <i class="ni ni-money-coins"></i>
+                                <span class="nav-link-text">Users Transaction History</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" asp-controller="Admin" asp-action="ApproveAsAdmin">
+                                <i class="ni ni-money-coins"></i>
+                                <span class="nav-link-text">Permissions For Admin Or Editor</span>
+                            </a>
+                        </li>
+                    }
+                    <li class="nav-item">
+                        <a style="background-color:#5e72e4;color:white" class="nav-link " asp-area="" asp-controller="Users" asp-action="SignOut">
+                            <i class=""></i>
+                            <span class="nav-link-text">Sign Out</span>
+                        </a>
+                    </li>
+
+                </ul>
+
+
+            </div>
+        </div>
+    </div>
+</nav>
 
 <!-- Main content -->
 <div class="main-content">
