--- a/Nithin2003/Views/Admin/UserstransactionHistory.cshtml
+++ b/Nithin2003/Views/Admin/UserstransactionHistory.cshtml
@@ -72,6 +72,12 @@
                                     <span class="nav-link-text">Users Transaction History</span>
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="Admin" asp-action="ApproveAsAdmin">
+                                    <i class="ni ni-money-coins"></i>
+                                    <span class="nav-link-text">Permissions For Admin Or Editor</span>
+                                </a>
+                            </li>
                         }
                         <li class="nav-item">
                             <a style="background-color:#5e72e4;color:white" class="nav-link " asp-area="" asp-controller="Users" asp-action="SignOut">
