homepage content changes

--- a/Nithin2003/Views/Home/Index.cshtml
+++ b/Nithin2003/Views/Home/Index.cshtml
@@ -83,7 +83,7 @@
                     <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
                         <div class="content">
                             <h3>Intruduction</h3>
-                            <h2>I am dhasari nithin ,I graguated in BCOM(C.A) from Government Degree College Armoor Under Telangana University </h2>
+                            <h2>I am Dhasari Nithin ,I graguated in BCOM(C.A) from Government Degree College Armoor under Telangana University </h2>
 
                             <div class="text-center text-lg-start">
                                 <a href="#" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
@@ -200,7 +200,7 @@
 
                 <header class="section-header">
                     <h2></h2>
-                    <p>My Skills</p>
+                    <p>My Programming Skills</p>
                 </header>
 
                 <div class="row">
@@ -215,42 +215,42 @@
                             <div class="col-md-6" data-aos="zoom-out" data-aos-delay="200">
                                 <div class="feature-box d-flex align-items-center">
                                     <i class="bi bi-check"></i>
-                                    <h3>C programming language</h3>
+                                    <h3>ASP.net Core MVC</h3>
                                 </div>
                             </div>
 
                             <div class="col-md-6" data-aos="zoom-out" data-aos-delay="300">
                                 <div class="feature-box d-flex align-items-center">
                                     <i class="bi bi-check"></i>
-                                    <h3>C#</h3>
+                                    <h3>Database SQL</h3>
                                 </div>
                             </div>
 
                             <div class="col-md-6" data-aos="zoom-out" data-aos-delay="400">
                                 <div class="feature-box d-flex align-items-center">
                                     <i class="bi bi-check"></i>
-                                    <h3>Database Sql</h3>
+                                    <h3>HTML5 / CSS3</h3>
                                 </div>
                             </div>
 
                             <div class="col-md-6" data-aos="zoom-out" data-aos-delay="500">
                                 <div class="feature-box d-flex align-items-center">
                                     <i class="bi bi-check"></i>
-                                    <h3>Basics in Html</h3>
+                                    <h3>C#</h3>
                                 </div>
                             </div>
 
                             <div class="col-md-6" data-aos="zoom-out" data-aos-delay="600">
                                 <div class="feature-box d-flex align-items-center">
                                     <i class="bi bi-check"></i>
-                                    <h3>Basics in Css</h3>
+                                    <h3>C Language</h3>
                                 </div>
                             </div>
 
                             <div class="col-md-6" data-aos="zoom-out" data-aos-delay="700">
                                 <div class="feature-box d-flex align-items-center">
                                     <i class="bi bi-check"></i>
-                                    <h3>Asp.net core mvc</h3>
+                                    <h3>Experiennce in hosting Asp.net web application</h3>
                                 </div>
                             </div>
 
