Recent functionality changes

--- a/Nithin2003/Views/DashBoard/Index.cshtml
+++ b/Nithin2003/Views/DashBoard/Index.cshtml
@@ -72,32 +72,33 @@
                                     <span class="nav-link-text">Track Loan Status</span>
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="Dashboard" asp-action="MyLoginDetails">
+                                    <i class="ni ni-circle-08"></i>
+                                    <span class="nav-link-text">My LogIn History</span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="Dashboard" asp-action="MytransactionHistory">
+                                    <i class="ni ni-money-coins"></i>
+                                    <span class="nav-link-text">My Transaction History</span>
+                                </a>
+                            </li>
 
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="Users" asp-action="EditDetails" asp-route-Username="@Model.Username">
+                                    <i class=""></i>
+                                    <span class="nav-link-text">Edit My Profile</span>
+
+                                </a>
+                            </li>
                         }
-                        <li class="nav-item">
-                            <a class="nav-link active" asp-controller="Dashboard" asp-action="MyLoginDetails">
-                                <i class="ni ni-circle-08"></i>
-                                <span class="nav-link-text">My LogIn History</span>
-                            </a>
-                        <li class="nav-item">
-                            <a class="nav-link active" asp-controller="Dashboard" asp-action="MytransactionHistory">
-                                <i class="ni ni-money-coins"></i>
-                                <span class="nav-link-text">My Transaction History</span>
-                            </a>
-                        </li>
+
+                        
 
 
-                        <li class="nav-item">
-                            <a class="nav-link active" asp-controller="Users" asp-action="EditDetails" asp-route-Username="@Model.Username">
-                                <i class=""></i>
-                                <span class="nav-link-text">Edit My Profile</span>
-
-                            </a>
-                        </li>
-
-
-                            @if (Context.Session.GetString("ContentEditor") == "True")
-                            {
+                        @if (Context.Session.GetString("ContentEditor") == "True")
+                        {
                             <li class="nav-item">
                                 <a class="nav-link active" asp-controller="Users" asp-action="UsersContentEditor">
                                     <i class="ni ni-money-coins"></i>
@@ -105,36 +106,58 @@
                                 </a>
                             </li>
 
-                            }
-                            @if (Context.Session.GetString("Admin") == "True")
-                            {
+                        }
+                        @if (Context.Session.GetString("Admin") == "True")
+                        {
 
-                            <li class="nav-item">
-                                <a class="nav-link active" asp-controller="Dashboard" asp-action="UsersLoginDetails">
-                                    <i class="ni ni-circle-08"></i>
-                                    <span class="nav-link-text">Users Login History</span>
-                                </a>
-                            </li>
                             <li class="nav-item">
                                 <a class="nav-link active" asp-controller="Admin" asp-action="Index">
                                     <i class="ni ni-circle-08"></i>
-                                    <span class="nav-link-text">Users Details</span>
+                                    <span class="nav-link-text">Admin Dashboard</span>
                                 </a>
                             </li>
-
                             <li class="nav-item">
-                                <a class="nav-link active" asp-controller="Users" asp-action="UsersContentEditor">
-                                    <i class="ni ni-circle-08"></i>
-                                    <span class="nav-link-text">Content Editor</span>
+                                <a class="nav-link active" asp-controller="Admin" asp-action="LoanAmountRequest">
+                                    <i class="ni ni-money-coins"></i>
+                                    <span class="nav-link-text">All Loan Requests</span>
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" asp-controller="Admin" asp-action="UserstransactionHistory">
                                     <i class="ni ni-money-coins"></i>
-                                    <span class="nav-link-text">Users Transaction History</span>
+                                    <span class="nav-link-text">All Transaction History</span>
                                 </a>
                             </li>
-                            }
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="Admin" asp-action="ApproveAsAdmin">
+                                    <i class="ni ni-money-coins"></i>
+                                    <span class="nav-link-text">Add Admin/Editor</span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="Dashboard" asp-action="UsersLoginDetails">
+                                    <i class="ni ni-circle-08"></i>
+                                    <span class="nav-link-text">All User Login History</span>
+                                </a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="Dashboard" asp-action="Index">
+                                    <i class="ni ni-tv-2 text-primary"></i>
+                                    <span class="nav-link-text">My Dashboard</span>
+                                </a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="Users" asp-action="EditDetails">
+                                    <i class="ni ni-circle-08"></i>
+                                    <span class="nav-link-text">Edit My Profile</span>
+
+                                </a>
+                            </li>
+
+                          
+                        }
                         <li class="nav-item">
                             <a style="background-color:#5e72e4;color:white" class="nav-link " asp-area="" asp-controller="Users" asp-action="SignOut">
                                 <i class=""></i>
@@ -143,7 +166,7 @@
                         </li>
 
 
-                            @* <li class="nav-item">
+                        @* <li class="nav-item">
                         <a class="nav-link">
                         <i class="ni ni-tv-2 text-primary"></i>
                         <span class="nav-link-text">Dashboard</span>
