--- a/Nithin2003/Views/Admin/ApproveAsAdmin.cshtml
+++ b/Nithin2003/Views/Admin/ApproveAsAdmin.cshtml
@@ -21,47 +21,51 @@
                 <!-- Nav items -->
                 <ul class="navbar-nav">
                     <li class="nav-item">
+                        <a class="nav-link active" asp-controller="Admin" asp-action="Index">
+                            <i class="ni ni-circle-08"></i>
+                            <span class="nav-link-text">Admin Dashboard</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" asp-controller="Admin" asp-action="LoanAmountRequest">
+                            <i class="ni ni-money-coins"></i>
+                            <span class="nav-link-text">All Loan Requests</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" asp-controller="Admin" asp-action="UserstransactionHistory">
+                            <i class="ni ni-money-coins"></i>
+                            <span class="nav-link-text">All Transaction History</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" asp-controller="Admin" asp-action="ApproveAsAdmin">
+                            <i class="ni ni-money-coins"></i>
+                            <span class="nav-link-text">Add Admin/Editor</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" asp-controller="Dashboard" asp-action="UsersLoginDetails">
+                            <i class="ni ni-circle-08"></i>
+                            <span class="nav-link-text">All User Login History</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
                         <a class="nav-link active" asp-controller="Dashboard" asp-action="Index">
                             <i class="ni ni-tv-2 text-primary"></i>
                             <span class="nav-link-text">My Dashboard</span>
                         </a>
                     </li>
 
-                    @if (Context.Session.GetString("Admin") == "True")
-                    {
-                        <li class="nav-item">
-                            <a class="nav-link active" asp-controller="Admin" asp-action="LoanAmountRequest">
-                                <i class="ni ni-money-coins"></i>
-                                <span class="nav-link-text">Loan Requests</span>
-                            </a>
-                        </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" asp-controller="Users" asp-action="EditDetails">
+                            <i class="ni ni-circle-08"></i>
+                            <span class="nav-link-text">Edit My Profile</span>
 
-                        <li class="nav-item">
-                            <a class="nav-link active" asp-controller="Dashboard" asp-action="UsersLoginDetails">
-                                <i class="ni ni-circle-08"></i>
-                                <span class="nav-link-text">Users Login History</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" asp-controller="Admin" asp-action="Index">
-                                <i class="ni ni-circle-08"></i>
-                                <span class="nav-link-text">Users Details</span>
-                            </a>
-                        </li>
+                        </a>
+                    </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link active" asp-controller="Admin" asp-action="UserstransactionHistory">
-                                <i class="ni ni-money-coins"></i>
-                                <span class="nav-link-text">Users Transaction History</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" asp-controller="Admin" asp-action="ApproveAsAdmin">
-                                <i class="ni ni-money-coins"></i>
-                                <span class="nav-link-text">Permissions For Admin Or Editor</span>
-                            </a>
-                        </li>
-                    }
                     <li class="nav-item">
                         <a style="background-color:#5e72e4;color:white" class="nav-link " asp-area="" asp-controller="Users" asp-action="SignOut">
                             <i class=""></i>
@@ -126,15 +130,15 @@
                                             <span class="input-group-text"><i class=""></i></span>
                                         </div>
                                         <input class="form-control" asp-for="@Model.UserName" placeholder="Enter User Name" type="text">
-                                        @* <span asp-validation-for="@Model.UserName" class="text-danger"></span> *@
+                                        
                                     </div>
                                 </div>
-                                <div class="form-group mb-3">
+                                @* <div class="form-group mb-3">
                                     <div class="input-group input-group-merge input-group-alternative">
                                         <span class="input-group-text"><i class=""></i></span>
                                         <h1 class="form-control">Admin</h1>
                                         <input type="checkbox" id="Admin" asp-for="@Model.Admin" /><br>
-                                        @* <span asp-validation-for="@Model.Admin" class="text-danger"></span> *@
+                                       
                                     </div>
                                 </div>
                                 <div class="form-group mb-3">
@@ -144,7 +148,18 @@
                                         <input type="checkbox" id="Content Editor" asp-for="@Model.Contenteditor" /><br>
                                         <span asp-validation-for="@Model.Contenteditor" class="text-danger"></span>
                                     </div>
-                                </div>
+                                </div> *@
+                                <div class="form-group mb-3">
+                                    <div class="input-group input-group-merge input-group-alternative">
+
+                                        @Html.DropDownList("AdminOrContentEditor", new List<SelectListItem>
+                                        {
+                                        new SelectListItem { Text = "Admin", Value = "Admin"},
+                                        new SelectListItem { Text = "Content Editor", Value = "ContentEditor"},
+                                        }, "Select Admin Or Editor", new { @class = "form-control" })
+
+                                    </div>
+                                    </div>
 
                                 <div class="text-center">
                                     @*<button type="button" class="btn btn-primary my-4">Sign in</button>*@
