--- a/Nithin2003/Views/Admin/LoanAmountRequest.cshtml
+++ b/Nithin2003/Views/Admin/LoanAmountRequest.cshtml
@@ -40,47 +40,51 @@
                     <!-- Nav items -->
                     <ul class="navbar-nav">
                         <li class="nav-item">
+                            <a class="nav-link active" asp-controller="Admin" asp-action="Index">
+                                <i class="ni ni-circle-08"></i>
+                                <span class="nav-link-text">Admin Dashboard</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" asp-controller="Admin" asp-action="LoanAmountRequest">
+                                <i class="ni ni-money-coins"></i>
+                                <span class="nav-link-text">All Loan Requests</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" asp-controller="Admin" asp-action="UserstransactionHistory">
+                                <i class="ni ni-money-coins"></i>
+                                <span class="nav-link-text">All Transaction History</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" asp-controller="Admin" asp-action="ApproveAsAdmin">
+                                <i class="ni ni-money-coins"></i>
+                                <span class="nav-link-text">Add Admin/Editor</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" asp-controller="Dashboard" asp-action="UsersLoginDetails">
+                                <i class="ni ni-circle-08"></i>
+                                <span class="nav-link-text">All User Login History</span>
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
                             <a class="nav-link active" asp-controller="Dashboard" asp-action="Index">
                                 <i class="ni ni-tv-2 text-primary"></i>
                                 <span class="nav-link-text">My Dashboard</span>
                             </a>
                         </li>
 
-                        @if (Context.Session.GetString("Admin") == "True")
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link active" asp-controller="Admin" asp-action="LoanAmountRequest">
-                                    <i class="ni ni-money-coins"></i>
-                                    <span class="nav-link-text">Loan Requests</span>
-                                </a>
-                            </li>                            
-                            <li class="nav-item">
-                                <a class="nav-link active" asp-controller="Dashboard" asp-action="UsersLoginDetails">
-                                    <i class="ni ni-circle-08"></i>
-                                    <span class="nav-link-text">Users Login History</span>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" asp-controller="Admin" asp-action="Index">
-                                    <i class="ni ni-circle-08"></i>
-                                    <span class="nav-link-text">Users Details</span>
-                                </a>
-                            </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" asp-controller="Users" asp-action="EditDetails">
+                                <i class="ni ni-circle-08"></i>
+                                <span class="nav-link-text">Edit My Profile</span>
 
+                            </a>
+                        </li>
 
-                            <li class="nav-item">
-                                <a class="nav-link active" asp-controller="Admin" asp-action="UserstransactionHistory">
-                                    <i class="ni ni-money-coins"></i>
-                                    <span class="nav-link-text">Users Transaction History</span>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" asp-controller="Admin" asp-action="ApproveAsAdmin">
-                                    <i class="ni ni-money-coins"></i>
-                                    <span class="nav-link-text">Permissions For Admin Or Editor</span>
-                                </a>
-                            </li>
-                        }
                         <li class="nav-item">
                             <a style="background-color:#5e72e4;color:white" class="nav-link " asp-area="" asp-controller="Users" asp-action="SignOut">
                                 <i class=""></i>
