--- a/Nithin2003/Views/Shared/_DashBoard.cshtml
+++ b/Nithin2003/Views/Shared/_DashBoard.cshtml
@@ -32,7 +32,7 @@
             <div class="sidenav-header  align-items-center">
                 <div class="sidenav-header  align-items-center">
                     <a class="navbar-brand" asp-controller="Home" asp-action="Index" type="button">
-                        <img style="max-height: 60px;width:200px;" src="~/Argon-assets/img/Screenshot 2024-11-03 214613.png" class="navbar-brand-img" alt="...">
+                        <img style="max-height: 60px;width:200px;" src="~/Argon-assets/img/Nithinnnnnn.png" class="navbar-brand-img" alt="...">
                         @* <img src="~/Argon-assets/img/nu_10137095.png" class="navbar-brand-img" alt="..."> *@
                     </a>
                 </div>
