--- a/Nithin2003/Views/Users/EditDetails.cshtml
+++ b/Nithin2003/Views/Users/EditDetails.cshtml
@@ -121,8 +121,8 @@
                 <div class="header-body text-center mb-7">
                     <div class="row justify-content-center">
                         <div class="col-xl-5 col-lg-6 col-md-8 px-5">
-                            <h1 class="text-white">Welcome!</h1>
-                            <p class="text-lead text-white">Update User Details </p>
+                            <h1 class="text-white"></h1>
+                            <p class="text-lead text-white">Update Yours Details </p>
                         </div>
                     </div>
                 </div>
