--- a/Nithin2003/Views/Admin/ApproveAsAdmin.cshtml
+++ b/Nithin2003/Views/Admin/ApproveAsAdmin.cshtml
@@ -10,10 +10,11 @@
     <div class="scrollbar-inner">
         <!-- Brand -->
         <div class="sidenav-header  align-items-center">
-            <a class="navbar-brand" asp-controller="Home" asp-action="Index" type="button">
-                <img style="max-height:60px;width:200px;" src="~/Argon-assets/img/Screenshot 2024-11-03 214613.png" class="navbar-brand-img" alt="...">
-
-            </a>
+            <div class="sidenav-header  align-items-center">
+                <a class="navbar-brand" asp-controller="Home" asp-action="Index" type="button">
+                    <img style="max-height: 60px;width:200px;" src="~/Argon-assets/img/Nithinnnnnn.png" class="navbar-brand-img" alt="...">
+                </a>
+            </div>
         </div>
         <div class="navbar-inner">
             <!-- Collapse -->
@@ -59,7 +60,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link active" asp-controller="Users" asp-action="EditDetails">
+                        <a class="nav-link active" asp-controller="Users" asp-action="EditDetails" asp-route-Username="@Context.Session.GetString("Username")">
                             <i class="ni ni-circle-08"></i>
                             <span class="nav-link-text">Edit My Profile</span>
 
@@ -89,8 +90,7 @@
             <div class="header-body text-center mb-7">
                 <div class="row justify-content-center">
                     <div class="col-xl-5 col-lg-6 col-md-8 px-5">
-                        @* <h1 class="text-white">Welcome To Sign In!</h1> *@
-                        @* <p class="text-lead text-white"> To Sign In </p>*@
+                       
                     </div>
                 </div>
             </div>
@@ -120,6 +120,7 @@
                         </div>
                         </div>*@
                         <div class="card-body px-lg-5 py-lg-5">
+                            <span style="color:forestgreen">@ViewBag.Message</span>
                             <div class="text-center text-muted mb-4">
                                 <small>Enter below details</small>
                             </div>
@@ -132,23 +133,9 @@
                                         <input class="form-control" asp-for="@Model.UserName" placeholder="Enter User Name" type="text">
                                         
                                     </div>
+                                    <span asp-validation-for="@Model.UserName" class="text-danger"></span>
                                 </div>
-                                @* <div class="form-group mb-3">
-                                    <div class="input-group input-group-merge input-group-alternative">
-                                        <span class="input-group-text"><i class=""></i></span>
-                                        <h1 class="form-control">Admin</h1>
-                                        <input type="checkbox" id="Admin" asp-for="@Model.Admin" /><br>
-                                       
-                                    </div>
-                                </div>
-                                <div class="form-group mb-3">
-                                    <div class="input-group input-group-merge input-group-alternative">
-                                        <span class="input-group-text"><i class=" "></i></span>
-                                        <h1 class="form-control">Content Editor</h1>
-                                        <input type="checkbox" id="Content Editor" asp-for="@Model.Contenteditor" /><br>
-                                        <span asp-validation-for="@Model.Contenteditor" class="text-danger"></span>
-                                    </div>
-                                </div> *@
+                                
                                 <div class="form-group mb-3">
                                     <div class="input-group input-group-merge input-group-alternative">
 
@@ -156,6 +143,7 @@
                                         {
                                         new SelectListItem { Text = "Admin", Value = "Admin"},
                                         new SelectListItem { Text = "Content Editor", Value = "ContentEditor"},
+                                        new SelectListItem { Text = "User", Value = "User"},
                                         }, "Select Admin Or Editor", new { @class = "form-control" })
 
                                     </div>
@@ -164,7 +152,7 @@
                                 <div class="text-center">
                                     @*<button type="button" class="btn btn-primary my-4">Sign in</button>*@
                                     <input type="submit" class="btn btn-primary my-4" name="btnsubmit" value="Make Changes"/>
-                                    <a asp-controller="Admin" asp-action="Index" class="btn btn-primary my-4" type="button">Back Users Details</a>
+                                    <a asp-controller="Admin" asp-action="Index" class="btn btn-primary my-4" type="button">Back to Admin Dashboard</a>
                                     
                                 </div>
 
