--- a/Nithin2003/Views/Admin/Index.cshtml
+++ b/Nithin2003/Views/Admin/Index.cshtml
@@ -44,10 +44,11 @@
         <div class="scrollbar-inner">
             <!-- Brand -->
             <div class="sidenav-header  align-items-center">
-                <a class="navbar-brand" asp-controller="Home" asp-action="Index" type="button">
-                    <img style="max-height:60px;width:200px;" src="~/Argon-assets/img/Screenshot 2024-11-03 214613.png" class="navbar-brand-img" alt="...">
-
-                </a>
+                <div class="sidenav-header  align-items-center">
+                    <a class="navbar-brand" asp-controller="Home" asp-action="Index" type="button">
+                        <img style="max-height: 60px;width:200px;" src="~/Argon-assets/img/Nithinnnnnn.png" class="navbar-brand-img" alt="...">
+                    </a>
+                </div>
             </div>
             <div class="navbar-inner">
                 <!-- Collapse -->
@@ -90,16 +91,16 @@
                                 <i class="ni ni-tv-2 text-primary"></i>
                                 <span class="nav-link-text">My Dashboard</span>
                             </a>
-                        </li>                  
-                    
-                            <li class="nav-item">
-                                <a class="nav-link active" asp-controller="Users" asp-action="EditDetails">
-                                <i class="ni ni-circle-08"></i>
-                                    <span class="nav-link-text">Edit My Profile</span>
+                        </li>
 
-                                </a>
-                            </li>
-                        
+                        <li class="nav-item">
+                            <a class="nav-link active" asp-controller="Users" asp-action="EditDetails" asp-route-Username="@Context.Session.GetString("Username")">
+                                <i class="ni ni-circle-08"></i>
+                                <span class="nav-link-text">Edit My Profile</span>
+
+                            </a>
+                        </li>
+
                         <li class="nav-item">
                             <a style="background-color:#5e72e4;color:white" class="nav-link " asp-area="" asp-controller="Users" asp-action="SignOut">
                                 <i class=""></i>
