--- a/Nithin2003/Views/Users/UsersContentEditor.cshtml
+++ b/Nithin2003/Views/Users/UsersContentEditor.cshtml
@@ -29,10 +29,11 @@
         <div class="scrollbar-inner">
             <!-- Brand -->
             <div class="sidenav-header  align-items-center">
-                <a class="navbar-brand" asp-controller="Home" asp-action="Index" type="button">
-                    <img style="max-height:60px;width:200px;" src="~/Argon-assets/img/Screenshot 2024-11-03 214613.png" class="navbar-brand-img" alt="...">
-
-                </a>
+                <div class="sidenav-header  align-items-center">
+                    <a class="navbar-brand" asp-controller="Home" asp-action="Index" type="button">
+                        <img style="max-height: 60px;width:200px;" src="~/Argon-assets/img/Nithinnnnnn.png" class="navbar-brand-img" alt="...">
+                    </a>
+                </div>
             </div>
             <div class="navbar-inner">
                 <!-- Collapse -->
