--- a/Nithin2003/Views/DashBoard/Index.cshtml
+++ b/Nithin2003/Views/DashBoard/Index.cshtml
@@ -53,6 +53,12 @@
                         @if (Context.Session.GetString("Admin") != "True")
                         {
                             <li class="nav-item">
+                                <a class="nav-link active" asp-controller="Dashboard" asp-action="Index">
+                                    <i class="ni ni-tv-2 text-primary"></i>
+                                    <span class="nav-link-text">My Dashboard</span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link active" asp-controller="DashBoard" asp-action="TransferMoney">
                                     <i class="ni ni-money-coins"></i>
                                     <span class="nav-link-text">Transfer Money</span>
@@ -87,15 +93,13 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link active" asp-controller="Users" asp-action="EditDetails" asp-route-Username="@Model.Username">
-                                    <i class=""></i>
+                                <a class="nav-link active" asp-controller="Users" asp-action="EditDetails" asp-route-Username="@Context.Session.GetString("Username")">
+                                    <i class="ni ni-circle-08"></i>
                                     <span class="nav-link-text">Edit My Profile</span>
 
                                 </a>
                             </li>
-                        }
-
-                        
+                        }                      
 
 
                         @if (Context.Session.GetString("ContentEditor") == "True")
