--- a/Nithin2003/Views/Dashboard/TrackLoanRequest.cshtml
+++ b/Nithin2003/Views/Dashboard/TrackLoanRequest.cshtml
@@ -28,9 +28,14 @@
                     <ul class="navbar-nav">
                         
 
-                        
                         @if (Context.Session.GetString("Admin") != "True")
                         {
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="Dashboard" asp-action="Index">
+                                    <i class="ni ni-tv-2 text-primary"></i>
+                                    <span class="nav-link-text">My Dashboard</span>
+                                </a>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link active" asp-controller="DashBoard" asp-action="TransferMoney">
                                     <i class="ni ni-money-coins"></i>
@@ -42,33 +47,48 @@
                                     <i class="ni ni-money-coins"></i>
                                     <span class="nav-link-text">Request a Loan</span>
                                 </a>
+
                             </li>
+
+
                             <li class="nav-item">
                                 <a class="nav-link active" asp-controller="DashBoard" asp-action="TrackLoanRequest">
                                     <i class="ni ni-money-coins"></i>
                                     <span class="nav-link-text">Track Loan Status</span>
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="Dashboard" asp-action="MyLoginDetails">
+                                    <i class="ni ni-circle-08"></i>
+                                    <span class="nav-link-text">My LogIn History</span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="Dashboard" asp-action="MytransactionHistory">
+                                    <i class="ni ni-money-coins"></i>
+                                    <span class="nav-link-text">My Transaction History</span>
+                                </a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="Users" asp-action="EditDetails" asp-route-Username="@Context.Session.GetString("Username")">
+                                    <i class="ni ni-circle-08"></i>
+                                    <span class="nav-link-text">Edit My Profile</span>
+
+                                </a>
+                            </li>
                         }
+
+
                         @if (Context.Session.GetString("ContentEditor") == "True")
                         {
                             <li class="nav-item">
                                 <a class="nav-link active" asp-controller="Users" asp-action="UsersContentEditor">
-                                    <i class="ni ni-circle-08"></i>
+                                    <i class="ni ni-money-coins"></i>
                                     <span class="nav-link-text">Content Editor</span>
                                 </a>
                             </li>
 
-                        }
-                        @if (Context.Session.GetString("Admin") == "True")
-                        {
-                            
-                            <li class="nav-item">
-                                <a class="nav-link active" asp-controller="Admin" asp-action="UserstransactionHistory">
-                                    <i class="ni ni-money-coins"></i>
-                                    <span class="nav-link-text">Users Transaction History</span>
-                                </a>
-                            </li>
                         }
                         <li class="nav-item">
                             <a style="background-color:#5e72e4;color:white" class="nav-link " asp-area="" asp-controller="Users" asp-action="SignOut">
@@ -158,8 +178,8 @@
                                 <i class="ni ni-send text-dark"></i>
                                 <span class="nav-link-text">Upgrade to PRO</span>
                             </a>
-                        </li>
-                    </ul>*@
+                        </li>*@
+                    </ul>
                 </div>
             </div>
         </div>
