--- a/Nithin2003/Views/Home/Index.cshtml
+++ b/Nithin2003/Views/Home/Index.cshtml
@@ -250,7 +250,7 @@
                             <div class="col-md-6" data-aos="zoom-out" data-aos-delay="700">
                                 <div class="feature-box d-flex align-items-center">
                                     <i class="bi bi-check"></i>
-                                    <h3>Experiennce in hosting Asp.net web application</h3>
+                                    <h3>Experience in hosting Asp.net web application</h3>
                                 </div>
                             </div>
 
